# t1-hack-solution

./: README.md
backend/: run.sh  test.url
backend/app/: Dockerfile  database.py  document_processor.py  fly.toml  main.py  models.py  mongodb.py  pyproject.toml  render.yaml  requirements.txt  vector_search.py  vector_store.py  vercel.json  websocket_handlers.py  websocket_manager.py
backend/app/api/: index.py
backend/app/database/: mongodb.py
backend/app/processors/: __init__.py  base.py  base_processor.py  confluence_processor.py  confluence_processor_extensions.py  document_processor.py  document_processor_factory.py  document_processors.py  docx_processor.py  integration_processors.py  notion_processor.py  notion_processor_extensions.py  pdf_processor.py  txt_processor.py  url_processor.py  url_processor_extensions.py  url_processors.py
backend/app/routers/: documents.py  processors.py  search.py  urls.py
backend/app/search/: vector_search.py
backend/app/security/: document_security.py  security_middleware.py
frontend/: .env.production  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/components/: CustomizationPanel.tsx  DocumentUpload.tsx  DragDropBuilder.tsx  Layout.tsx  UrlInput.tsx  WebSocketProvider.tsx
frontend/src/contexts/: ThemeContext.tsx
frontend/src/hooks/: useResponsive.ts  useSecureWebSocket.ts  useWebSocket.ts
frontend/src/styles/: animations.css  glass.css  tailwind.css
frontend/src/types/: dragDrop.ts  index.d.ts  reactflow.d.ts  websocket.ts
(+38 files in other folders)
